--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <div class="navigation">
-            <h1><a herf="index.html">Valia Liu</a></h1>
+            <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
             <ol class="category">
                 <li>Editorial Design</li><br>
@@ -28,7 +28,7 @@
                 <li>Handcrafts</li><br>
             </ol>
             <hr>
-            <h1><a herf="about.html">About</a></h1>
+            <h1><a href="about.html">About</a></h1>
             <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email</a></h1>
         </div>
         <div class="home">
