--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>Poster</li><br>
                 <li>3D Modeling</li><br>
                 <li>Video / Animation</li><br>
-                <li>Handcrafts</li><br>
+                <li>Others</li><br>
             </ol>
             <hr>
             <h1><a href="about.html">About</a></h1>
