--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li>Poster</li><br>
                 <li>3D Modeling</li><br>
                 <li>Video / Animation</li><br>
+                <li>Website</li><br>
                 <li>Others</li><br>
             </ol>
             <hr>
@@ -32,8 +33,16 @@
             <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email</a></h1>
         </div>
         <div class="home">
-            <h1 style="font-style: italic;">Room #Dream</h1>
+            <h1 style="font-style: italic;">Altoona</h1>
             <hr>
+            <a href="https://www.qries.com/">
+                <img src="archive/altoona/altoona vinyl.png" class="pic">
+            </a>
+            <h1 style="font-style: italic;"><br>Midnight (Blues) &U</h1>
+            <hr>
+            <a href="https://www.qries.com/">
+                <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic">
+            </a>
         </div>
     </body>
 </html>
