--- a/about.html
+++ b/about.html
@@ -20,14 +20,14 @@
         <div class="navigation">
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
-            <ol class="category">
+            <!-- <ol class="category">
                 <li>Editorial Design</li><br>
                 <li>Poster</li><br>
                 <li>3D Modeling</li><br>
                 <li>Video / Animation</li><br>
                 <li>Website</li><br>
                 <li>Others</li><br>
-            </ol>
+            </ol> -->
             <hr>
             <h1><a href="about.html">About</a></h1>
             <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email</a></h1>
