--- a/index.html
+++ b/index.html
@@ -20,27 +20,29 @@
         <div class="navigation">
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
-            <ol class="category">
-                <li>Editorial Design</li><br>
-                <li>Poster</li><br>
-                <li>3D Modeling</li><br>
-                <li>Video / Animation</li><br>
-                <li>Website</li><br>
-                <li>Others</li><br>
-            </ol>
+            <h1 class="category">
+                <input type="checkbox">&nbsp Poster<br>
+                <input type="checkbox">&nbsp Editorial Design<br>
+                <input type="checkbox">&nbsp Web Design<br>
+                <input type="checkbox">&nbsp 3D Modeling<br>
+                <input type="checkbox">&nbsp Branding<br>
+                <input type="checkbox">&nbsp Video<br>
+                <input type="checkbox">&nbsp Others<br>
+            </h1>
             <hr>
             <h1><a href="about.html">About</a></h1>
-            <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email</a></h1>
+            <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email↗</a></h1>
+            <br><h1>* This site is under construction. The navigation filter and individual project links are currently unavailable. <br>Sry :(((</h1>
         </div>
         <div class="home">
-            <h1 style="font-style: italic;">Altoona</h1>
+            <h1 style="font-style: italic;"><a href="">Altoona</a></h1>
             <hr>
-            <a href="https://www.qries.com/">
+            <a href="">
                 <img src="archive/altoona/altoona vinyl.png" class="pic">
-            </a>
-            <h1 style="font-style: italic;"><br>Midnight (Blues) &U</h1>
+            </a><br>
+            <h1 style="font-style: italic;"><br><a href="">Midnight (Blues) &U</a></h1>
             <hr>
-            <a href="https://www.qries.com/">
+            <a href="">
                 <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic">
             </a>
         </div>
