--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
             <br><h1>* This site is under construction. The navigation filter and individual project links are currently unavailable. <br>Sry :(((</h1>
         </div>
         <div class="home">
-            <h1 style="font-style: italic;"><a href="">Altoona</a></h1>
+            <h1 style="font-style: italic;"><a href="">Midnight (Blues) &U</a></h1>
+            <hr>
+            <a href="">
+                <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic">
+            </a><br>
+
+            <h1 style="font-style: italic;"><br><a href="">Altoona</a></h1>
             <hr>
             <a href="">
                 <img src="archive/altoona/altoona vinyl.png" class="pic">
             </a><br>
-            <h1 style="font-style: italic;"><br><a href="">Midnight (Blues) &U</a></h1>
-            <hr>
-            <a href="">
-                <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic">
-            </a>
         </div>
     </body>
 </html>
