--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
                 <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic">
             </a><br>
 
+            <h1 style="font-style: italic;"><br><a href="">Letter A</a></h1>
+            <hr>
+            <div class="pic2">
+                <a href="">
+                    <img src="archive/letter_a/purple.png" class="pic21">
+                </a>
+                <a href="">
+                    <img src="archive/letter_a/green.png" class="pic22">
+                </a>
+            </div>
+
             <h1 style="font-style: italic;"><br><a href="">Altoona</a></h1>
             <hr>
             <a href="">
