--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="script.js"></script>
         
         <title>Valia Liu Portfolio</title>
-        <link rel="icon" href="icon.jpeg">
+        <link rel="icon" href="">
     </head>
 
     <body>
@@ -21,13 +21,13 @@
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
             <h1 class="category">
-                <input type="checkbox">&nbsp Poster<br>
-                <input type="checkbox">&nbsp Editorial Design<br>
-                <input type="checkbox">&nbsp Web Design<br>
-                <input type="checkbox">&nbsp 3D Modeling<br>
-                <input type="checkbox">&nbsp Branding<br>
-                <input type="checkbox">&nbsp Video<br>
-                <input type="checkbox">&nbsp Others<br>
+                <input type="checkbox" id="posterc">&nbsp Poster<br>
+                <input type="checkbox" id="editorialc">&nbsp Editorial Design<br>
+                <input type="checkbox" id="webc">&nbsp Web Design<br>
+                <input type="checkbox" id="modelingc">&nbsp 3D Modeling<br>
+                <input type="checkbox" id="brandingc">&nbsp Branding<br>
+                <input type="checkbox" id="videoc">&nbsp Video<br>
+                <input type="checkbox" id="otherc">&nbsp Others<br>
             </h1>
             <hr>
             <h1><a href="about.html">About</a></h1>
@@ -35,27 +35,27 @@
             <br><h1>* This site is under construction. The navigation filter and individual project links are currently unavailable. <br>Sry :(((</h1>
         </div>
         <div class="home">
-            <h1 style="font-style: italic;"><a href="">Midnight (Blues) &U</a></h1>
+            <h1 style="font-style: italic;"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight (Blues) &U</a></h1>
             <hr>
-            <a href="">
-                <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic">
+            <a href="archive/midnight_blues_u/midnight_blues_u.html">
+                <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic pica">
             </a><br>
 
             <h1 style="font-style: italic;"><br><a href="">Letter A</a></h1>
             <hr>
             <div class="pic2">
                 <a href="">
-                    <img src="archive/letter_a/purple.png" class="pic21">
+                    <img src="archive/letter_a/purple.png" class="pic21 pica">
                 </a>
                 <a href="">
-                    <img src="archive/letter_a/green.png" class="pic22">
+                    <img src="archive/letter_a/green.png" class="pic22 pica">
                 </a>
             </div>
 
             <h1 style="font-style: italic;"><br><a href="">Altoona</a></h1>
             <hr>
             <a href="">
-                <img src="archive/altoona/altoona vinyl.png" class="pic">
+                <img src="archive/altoona/altoona vinyl.png" class="pic pica">
             </a><br>
         </div>
     </body>
