--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <hr>
             <h1><a href="about.html">About</a></h1>
             <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email↗</a></h1>
-            <br><h1>* This site is under construction. The navigation filter and individual project links are currently unavailable. <br>Sry :(((</h1>
+            <br><h1>* This site is under construction. The navigation filter is currently unavailable. <br>Sry :(((</h1>
         </div>
         <div class="home">
             <h1 style="font-style: italic;"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight (Blues) &U</a></h1>
@@ -41,22 +41,40 @@
                 <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic pica">
             </a><br>
 
-            <h1 style="font-style: italic;"><br><a href="">Letter A</a></h1>
+            <h1 style="font-style: italic;"><br><a href="archive/letter_a/letter_a.html">Letter A</a></h1>
             <hr>
             <div class="pic2">
-                <a href="">
+                <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/purple.png" class="pic21 pica">
                 </a>
-                <a href="">
+                <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/green.png" class="pic22 pica">
+                </a>
+            </div><br><br>
+
+            <h1 style="font-style: italic;"><a href="archive/slipping_1/slipping_1.html">Slipping Collection (1)</a></h1>
+            <hr>
+            <a href="archive/slipping_1/slipping_1.html">
+                <img src="archive/slipping_1/main.png" class="pic pica">
+            </a><br>
+
+            <h1 style="font-style: italic;"><br><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.</a></h1>
+            <hr>
+            <div class="pic2">
+                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
+                    <img src="archive/a_pile_of_poo/web1.png" class="pica" style="width:68%; display: inline-block;">
+                </a>
+                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
+                    <img src="archive/a_pile_of_poo/cover.png" class="pica" style="width:31%; display: inline-block;">
                 </a>
             </div>
 
-            <h1 style="font-style: italic;"><br><a href="">Altoona</a></h1>
+            <!-- <h1 style="font-style: italic;"><br><a href="">Altoona</a></h1>
             <hr>
             <a href="">
                 <img src="archive/altoona/altoona vinyl.png" class="pic pica">
-            </a><br>
+            </a><br> -->
+            <br>
         </div>
     </body>
 </html>
