--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="style.css"> 
         <script src="script.js"></script>
         
-        <title>Valia Liu Portfolio</title>
+        <title>(Cocoon Storage) Valia Liu</title>
         <link rel="icon" href="icon.jpeg">
     </head>
 
