--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="style.css"> 
         <script src="script.js"></script>
         
-        <title>Valia Liu Portfolio</title>
+        <title>(Cocoon Storage) Valia Liu</title>
         <link rel="icon" href="">
     </head>
 
@@ -62,10 +62,10 @@
             <hr>
             <div class="pic2">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/web1.png" class="pica" style="width:68%; display: inline-block;">
+                    <img src="archive/a_pile_of_poo/web1.png" class="pica" style="width:67%; display: inline-block;">
                 </a>
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/cover.png" class="pica" style="width:31%; display: inline-block;">
+                    <img src="archive/a_pile_of_poo/cover.png" class="pica" style="width:31%; display: block; float: right;">
                 </a>
             </div>
 
