--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="script.js"></script>
         
         <title>(Cocoon Storage) Valia Liu</title>
-        <link rel="icon" href="">
+        <link rel="icon" href="icon.png">
     </head>
 
     <body>
