--- a/index.html
+++ b/index.html
@@ -41,22 +41,16 @@
                 <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic pica">
             </a><br>
 
-            <h1 style="font-style: italic;"><br><a href="archive/letter_a/letter_a.html">Letter A</a></h1>
+            <h1 style="font-style: italic;"><br><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression</a></h1>
             <hr>
             <div class="pic2">
-                <a href="archive/letter_a/letter_a.html">
-                    <img src="archive/letter_a/purple.png" class="pic21 pica">
+                <a href="archive/contemporary_art_expression/contemporary.html">
+                    <img src="archive/contemporary_art_expression/1.png" class="pic21 pica">
                 </a>
-                <a href="archive/letter_a/letter_a.html">
-                    <img src="archive/letter_a/green.png" class="pic22 pica">
+                <a href="archive/contemporary_art_expression/contemporary.html">
+                    <img src="archive/contemporary_art_expression/2.png" class="pic22 pica">
                 </a>
-            </div><br><br>
-
-            <h1 style="font-style: italic;"><a href="archive/slipping_1/slipping_1.html">Slipping Collection (1)</a></h1>
-            <hr>
-            <a href="archive/slipping_1/slipping_1.html">
-                <img src="archive/slipping_1/main.png" class="pic pica">
-            </a><br>
+            </div>
 
             <h1 style="font-style: italic;"><br><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.</a></h1>
             <hr>
@@ -67,7 +61,36 @@
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
                     <img src="archive/a_pile_of_poo/cover.png" class="pica" style="width:31%; display: block; float: right;">
                 </a>
-            </div>
+            </div><br><br>
+
+            <h1 style="font-style: italic;"><a href="archive/altoona/altoona.html">Altoona</a></h1>
+            <hr>
+            <a href="archive/altoona/altoona.html">
+                <img src="archive/altoona/display.png" class="pic pica">
+            </a><br><br><br>
+
+            <h1 style="font-style: italic;"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle</a></h1>
+            <hr>
+            <a href="archive/caught_in_the_middle/caught.html">
+                <img src="archive/caught_in_the_middle/display.png" class="pic pica">
+            </a><br><br><br>
+
+            <h1 style="font-style: italic;"><a href="archive/slipping_1/slipping_1.html">Slipping Collection (1)</a></h1>
+            <hr>
+            <a href="archive/slipping_1/slipping_1.html">
+                <img src="archive/slipping_1/main.png" class="pic pica">
+            </a><br>
+
+            <h1 style="font-style: italic;"><br><a href="archive/letter_a/letter_a.html">Letter A</a></h1>
+            <hr>
+            <div class="pic2">
+                <a href="archive/letter_a/letter_a.html">
+                    <img src="archive/letter_a/purple.png" class="pic21 pica">
+                </a>
+                <a href="archive/letter_a/letter_a.html">
+                    <img src="archive/letter_a/green.png" class="pic22 pica">
+                </a>
+            </div><br><br>
 
             <!-- <h1 style="font-style: italic;"><br><a href="">Altoona</a></h1>
             <hr>
