--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <hr>
             <div class="pic2">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/web1.png" class="pica" style="width:67%; display: inline-block;">
+                    <img src="archive/a_pile_of_poo/web1.png" class="pica" style="width:67%; display: inline-block; box-shadow: 0px 6px 10px #cecece;">
                 </a>
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/cover.png" class="pica" style="width:31%; display: block; float: right;">
+                    <img src="archive/a_pile_of_poo/cover.png" class="pica" style="width:31%; display: block; float: right; transform: translateY(-3px);">
                 </a>
             </div><br><br>
 
