--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             </ol> -->
             <hr>
             <h1><a href="about.html">About</a></h1>
-            <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email</a></h1>
+            <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email</a></h1>
         </div>
     </body>
 </html>
