--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             </h1>
             <hr>
             <h1><a href="about.html">About</a></h1>
-            <h1><a href="mailto:cliu07@risd.edu" target="_blank">Email↗</a></h1>
+            <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h1>
             <br><h1>* This site is under construction. The navigation filter is currently unavailable. <br>Sry :(((</h1>
         </div>
-        <div class="home">
+        <div class="home main">
             <h1 style="font-style: italic;"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight (Blues) &U</a></h1>
             <hr>
             <a href="archive/midnight_blues_u/midnight_blues_u.html">
@@ -92,12 +92,11 @@
                 </a>
             </div><br><br>
 
-            <!-- <h1 style="font-style: italic;"><br><a href="">Altoona</a></h1>
-            <hr>
-            <a href="">
-                <img src="archive/altoona/altoona vinyl.png" class="pic pica">
-            </a><br> -->
+
             <br>
         </div>
+
+
+        <div class="home navi"></div>
     </body>
 </html>
