--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
                 <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/green.png" class="pic22 pica">
                 </a>
-            </div><br><br>
+            </div>
+            <!-- <br><br> -->
 
-
-            <br>
         </div>
 
 
