--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </head>
 
     <body>
+        <div class="vnavigation">
+            <h2 style="width:fit-content; float: left; margin-left: 6px;"><a href="index.html">Valia Liu</a></h2>
+            <h2 style="width:fit-content; float:right;"><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h2>
+            <h2 style="width:fit-content; float:right; margin-right: 3%;"><a href="about.html">About</a></h2>
+        </div>
         <div class="navigation">
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
@@ -56,10 +61,10 @@
             <hr>
             <div class="pic2">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/web1.png" class="pica" style="width:67%; display: inline-block; box-shadow: 0px 6px 10px #cecece;">
+                    <img src="archive/a_pile_of_poo/web1.png" class="pica" id="poo1">
                 </a>
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/cover.png" class="pica" style="width:31%; display: block; float: right; transform: translateY(-3px);">
+                    <img src="archive/a_pile_of_poo/cover.png" class="pica" id="poo2">
                 </a>
             </div><br><br>
 
@@ -92,7 +97,6 @@
                 </a>
             </div>
             <!-- <br><br> -->
-
         </div>
 
 
