--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <body>
         <div class="vnavigation">
             <h2 style="width:fit-content; float: left; margin-left: 6px;"><a href="index.html">Valia Liu</a></h2>
-            <h2 style="width:fit-content; float:right;"><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h2>
+            <h2 style="width:fit-content; float:right;"><a href="mailto:valialiuwork@gmail.com" target="_blank">Email&#8599</a></h2>
             <h2 style="width:fit-content; float:right; margin-right: 3%;"><a href="about.html">About</a></h2>
         </div>
+
         <div class="navigation">
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
