--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
         <link rel="icon" href="icon.png">
     </head>
 
+    <style>
+        @media screen and (max-width: 640px) {
+            .pic21 {
+                width: 100%;
+            }
+
+            .pic22 {
+                display: none;
+            }
+
+            #poo1 {
+                width: 100%; 
+            }
+            
+            #poo2 {
+                display: none;
+            } 
+        }
+    </style>
+
     <body>
         <div class="vnavigation">
             <h2 style="width:fit-content; float: left; margin-left: 6px;"><a href="index.html">Valia Liu</a></h2>
@@ -77,7 +97,7 @@
 
             <h1 style="font-style: italic;"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle</a></h1>
             <hr>
-            <a href="archive/caught_in_the_middle/caught.html">
+            <a href="archive/caught_in_the_middle/caught.html" id="caughtmiddle">
                 <img src="archive/caught_in_the_middle/display.png" class="pic pica">
             </a><br><br><br>
 
