--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="home main">
             <h1 style="font-style: italic;"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight (Blues) &U</a></h1>
             <hr>
-            <a href="archive/midnight_blues_u/midnight_blues_u.html">
+            <a href="archive/midnight_blues_u/midnight_blues_u.html" id="midnightblues">
                 <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic pica">
             </a><br>
 
@@ -91,7 +91,7 @@
 
             <h1 style="font-style: italic;"><a href="archive/altoona/altoona.html">Altoona</a></h1>
             <hr>
-            <a href="archive/altoona/altoona.html">
+            <a href="archive/altoona/altoona.html" id="altoona">
                 <img src="archive/altoona/display.png" class="pic pica">
             </a><br><br><br>
 
