--- a/resume.html
+++ b/resume.html
@@ -26,13 +26,13 @@
 
     <body>
         <div class="vnavigation">
-            <h2 style="width:fit-content; float: left; margin-left: 6px;"><a href="../../index.html">Valia Liu</a></h2>
+            <h2 style="width:fit-content; float: left; margin-left: 6px;"><a href="index.html">Valia Liu</a></h2>
             <h2 style="width:fit-content; float:right;"><a href="mailto:valialiuwork@gmail.com" target="_blank">Email&#x2197;&#xFE0E;</a></h2>
-            <h2 style="width:fit-content; float:right; margin-right: 3%;"><a href="../../about.html">About</a></h2>
+            <h2 style="width:fit-content; float:right; margin-right: 3%;"><a href="about.html">About</a></h2>
         </div>
 
         <div class="navigation">
-            <h1><a href="../../index.html">Valia Liu</a></h1>
+            <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
             <h1 class="category disable">
                 <input type="checkbox" id="posterc">&nbsp Poster<br>
@@ -44,7 +44,7 @@
                 <input type="checkbox" id="otherc">&nbsp Others<br>
             </h1>
             <hr>
-            <h1><a href="../../about.html">About</a></h1>
+            <h1><a href="about.html">About</a></h1>
             <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h1>
             <br><br>
             <h1><a href="Valia resume 2022.pdf" download target="_blank">Download Resume↗</a></h1>
