--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
                 <img src="archive/caught_in_the_middle/display.png" class="pic pica">
             </a><br><br><br>
 
-            <h1 style="font-style: italic;"><a href="archive/slipping_1/slipping_1.html">Slipping Collection (1)</a></h1>
+            <h1 style="font-style: italic;"><a href="archive/micro_nova/micro nova.html">MicroNova</a></h1>
             <hr>
-            <a href="archive/slipping_1/slipping_1.html">
-                <img src="archive/slipping_1/main.png" class="pic pica">
+            <a href="archive/micro_nova/micro nova.html" id="micronova">
+                <video width="100%" height="auto" poster="videoclip.png" autoplay loop>
+                    <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
             </a><br>
 
             <h1 style="font-style: italic;"><br><a href="archive/letter_a/letter_a.html">Letter A</a></h1>
@@ -116,8 +119,13 @@
                 <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/green.png" class="pic22 pica">
                 </a>
-            </div>
-            <!-- <br><br> -->
+            </div><br><br>
+
+            <h1 style="font-style: italic;"><a href="archive/slipping_1/slipping_1.html">Slipping Collection (1)</a></h1>
+            <hr>
+            <a href="archive/slipping_1/slipping_1.html">
+                <img src="archive/slipping_1/main.png" class="pic pica">
+            </a><br><br><br>
         </div>
 
 
