--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                 <img src="archive/altoona/display.png" class="pic pica">
             </a><br><br><br>
 
+            <h1 style="font-style: italic;"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library</a></h1>
+            <hr>
+            <a href="archive/millerknoll/millerknoll.html">
+                <img src="archive/millerknoll/bc.png" class="pic pica">
+            </a><br><br><br>
+
             <h1 style="font-style: italic;"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle</a></h1>
             <hr>
             <a href="archive/caught_in_the_middle/caught.html" id="caughtmiddle">
@@ -104,7 +110,7 @@
             <h1 style="font-style: italic;"><a href="archive/micro_nova/micro nova.html">MicroNova</a></h1>
             <hr>
             <a href="archive/micro_nova/micro nova.html" id="micronova">
-                <video width="100%" height="auto" poster="videoclip.png" autoplay loop>
+                <video width="100%" height="auto" autoplay loop>
                     <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
