--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <hr>
             <a href="archive/micro_nova/micro nova.html" id="micronova">
                 <video width="100%" height="auto" autoplay loop>
-                    <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
+                    <source src="archive/micro_nova/micro nova.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
             </a><br>
