--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
             <h1 style="font-style: italic;"><a href="archive/micro_nova/micro nova.html">MicroNova</a></h1>
             <hr>
-            <!-- <a href="archive/micro_nova/micro nova.html"> -->
-                <video width="100%" height="auto" autoplay loop>
+            <a href="archive/micro_nova/micro nova.html">
+                <video width="100%" height="auto" style="cursor: url('pointer.png') 15 0,auto;"autoplay loop>
                     <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
