--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
         </div>
         <div class="home main">
             <h1 style="font-style: italic;"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight (Blues) &U</a></h1>
-            <hr>
+            <br>
             <a href="archive/midnight_blues_u/midnight_blues_u.html" id="midnightblues">
                 <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic pica">
-            </a><br>
+            </a>
+            <hr><br><br>
 
-            <h1 style="font-style: italic;"><br><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression</a></h1>
-            <hr>
+            <h1 style="font-style: italic;"><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression</a></h1>
+            <br>
             <div class="pic2">
                 <a href="archive/contemporary_art_expression/contemporary.html">
                     <img src="archive/contemporary_art_expression/1.png" class="pic21 pica">
@@ -76,10 +77,10 @@
                 <a href="archive/contemporary_art_expression/contemporary.html">
                     <img src="archive/contemporary_art_expression/2.png" class="pic22 pica">
                 </a>
-            </div>
+            </div><hr><br><br>
 
-            <h1 style="font-style: italic;"><br><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.</a></h1>
-            <hr>
+            <h1 style="font-style: italic;"><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.</a></h1>
+            <br>
             <div class="pic2">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
                     <img src="archive/a_pile_of_poo/web1.png" class="pica" id="poo1">
@@ -87,37 +88,37 @@
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
                     <img src="archive/a_pile_of_poo/cover.png" class="pica" id="poo2">
                 </a>
-            </div><br><br>
+            </div><hr><br><br>
 
             <h1 style="font-style: italic;"><a href="archive/altoona/altoona.html">Altoona</a></h1>
-            <hr>
+            <br>
             <a href="archive/altoona/altoona.html" id="altoona">
                 <img src="archive/altoona/display.png" class="pic pica">
-            </a><br><br><br>
+            </a><hr><br><br>
 
             <h1 style="font-style: italic;"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library</a></h1>
-            <hr>
+            <br>
             <a href="archive/millerknoll/millerknoll.html">
                 <img src="archive/millerknoll/bc.png" class="pic pica">
-            </a><br><br><br>
+            </a><hr><br><br>
 
             <h1 style="font-style: italic;"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle</a></h1>
-            <hr>
+            <br>
             <a href="archive/caught_in_the_middle/caught.html" id="caughtmiddle">
                 <img src="archive/caught_in_the_middle/display.png" class="pic pica">
-            </a><br><br><br>
+            </a><hr><br><br>
 
             <h1 style="font-style: italic;"><a href="archive/micro_nova/micro nova.html">MicroNova</a></h1>
-            <hr>
+            <br>
             <a href="archive/micro_nova/micro nova.html">
                 <video width="100%" height="auto" style="cursor: url('pointer.png') 15 0,auto;"autoplay loop>
                     <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
-            </a><br>
+            </a><hr>
 
             <h1 style="font-style: italic;"><br><a href="archive/letter_a/letter_a.html">Letter A</a></h1>
-            <hr>
+            <br>
             <div class="pic2">
                 <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/purple.png" class="pic21 pica">
@@ -125,13 +126,13 @@
                 <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/green.png" class="pic22 pica">
                 </a>
-            </div><br><br>
+            </div><hr><br><br>
 
             <h1 style="font-style: italic;"><a href="archive/slipping_1/slipping_1.html">Slipping Collection (1)</a></h1>
-            <hr>
+            <br>
             <a href="archive/slipping_1/slipping_1.html">
                 <img src="archive/slipping_1/main.png" class="pic pica">
-            </a><br><br><br>
+            </a><hr><br><br>
         </div>
 
 
