--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@
             .pic22 {
                 display: none;
             }
-
-            #poo1 {
-                width: 100%; 
-            }
-            
-            #poo2 {
-                display: none;
-            } 
         }
     </style>
 
@@ -48,9 +40,9 @@
             <hr>
             <h1 class="category">
                 <input type="checkbox" id="posterc">&nbsp Poster<br>
-                <input type="checkbox" id="editorialc">&nbsp Editorial Design<br>
-                <input type="checkbox" id="webc">&nbsp Web Design<br>
-                <input type="checkbox" id="modelingc">&nbsp 3D Modeling<br>
+                <input type="checkbox" id="editorialc">&nbsp Editorial<br>
+                <input type="checkbox" id="webc">&nbsp Website<br>
+                <input type="checkbox" id="modelingc">&nbsp Modeling<br>
                 <input type="checkbox" id="brandingc">&nbsp Branding<br>
                 <input type="checkbox" id="videoc">&nbsp Video<br>
                 <input type="checkbox" id="otherc">&nbsp Others<br>
@@ -60,16 +52,76 @@
             <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h1>
             <br><h1>* This site is under construction. The navigation filter is currently unavailable. <br>Sry :(((</h1>
         </div>
-        <div class="home main">
-            <h1 style="font-style: italic;"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight (Blues) &U</a></h1>
-            <br>
-            <a href="archive/midnight_blues_u/midnight_blues_u.html" id="midnightblues">
-                <img src="archive/midnight_blues_u/midnight vinyl.png" class="pic pica">
-            </a>
-            <hr><br><br>
 
-            <h1 style="font-style: italic;"><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression</a></h1>
+
+
+        <div class="home main">
+            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <video width="100%" height="auto" autoplay loop>
+                    <source src="archive/second_best/SECOND BEST.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </a>
+            <br><br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Second Best<br>Frame-by-frame Animation</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic2">
+                <a href="archive/midnight_blues_u/midnight_blues_u.html">
+                    <img src="archive/midnight_blues_u/cover.png" class="pic21 pica">
+                </a>
+                <a href="archive/midnight_blues_u/midnight_blues_u.html">
+                    <img src="archive/midnight_blues_u/vinyl.png" class="pic22 pica">
+                </a>
+            </div>
             <br>
+            <h1 class="title"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight <span style="font-style: italic;">(Blues)</span> &U<br>Vinyl Design</a></h1>
+            <br><hr><br><br>
+
+
+            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <img src="archive/black_mamba/poster2.png" class="pic">
+            </a>
+            <br><br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Black Mamba<br>Letter Design & Motion Poster</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic2">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/moon_would_you/moon.png" class="pic21">
+                </a>
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/moon_would_you/moond.png" class="pic22">
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Moon, would you<br>Vinyl Design</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic2">
+                <a href="archive/altoona/altoona.html">
+                    <img src="archive/altoona/altoona cover.png" class="pic21 pica">
+                </a>
+                <a href="archive/altoona/altoona.html">
+                    <img src="archive/altoona/altoonav.png" class="pic22 pica">
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <a href="archive/altoona/altoona.html">
+                    Altoona<br>Vinyl Design & Set Building</a></h1>
+            <br><hr><br><br>
+
+
             <div class="pic2">
                 <a href="archive/contemporary_art_expression/contemporary.html">
                     <img src="archive/contemporary_art_expression/1.png" class="pic21 pica">
@@ -77,48 +129,47 @@
                 <a href="archive/contemporary_art_expression/contemporary.html">
                     <img src="archive/contemporary_art_expression/2.png" class="pic22 pica">
                 </a>
-            </div><hr><br><br>
+            </div><br>
+            <h1 class="title"><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression<br>Poster Design</a></h1>
+            <br><hr><br><br>
 
-            <h1 style="font-style: italic;"><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.</a></h1>
-            <br>
-            <div class="pic2">
-                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/web1.png" class="pica" id="poo1">
-                </a>
-                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/cover.png" class="pica" id="poo2">
-                </a>
-            </div><hr><br><br>
-
-            <h1 style="font-style: italic;"><a href="archive/altoona/altoona.html">Altoona</a></h1>
-            <br>
-            <a href="archive/altoona/altoona.html" id="altoona">
-                <img src="archive/altoona/display.png" class="pic pica">
-            </a><hr><br><br>
-
-            <h1 style="font-style: italic;"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library</a></h1>
-            <br>
-            <a href="archive/millerknoll/millerknoll.html">
-                <img src="archive/millerknoll/bc.png" class="pic pica">
-            </a><hr><br><br>
-
-            <h1 style="font-style: italic;"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle</a></h1>
-            <br>
-            <a href="archive/caught_in_the_middle/caught.html" id="caughtmiddle">
-                <img src="archive/caught_in_the_middle/display.png" class="pic pica">
-            </a><hr><br><br>
-
-            <h1 style="font-style: italic;"><a href="archive/micro_nova/micro nova.html">MicroNova</a></h1>
-            <br>
+            
             <a href="archive/micro_nova/micro nova.html">
-                <video width="100%" height="auto" style="cursor: url('pointer.png') 15 0,auto;"autoplay loop>
+                <video width="100%" height="auto" style="cursor: url('pointer.png') 15 0,auto;" class="videoa" autoplay loop>
                     <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
-            </a><hr>
-
-            <h1 style="font-style: italic;"><br><a href="archive/letter_a/letter_a.html">Letter A</a></h1>
+            </a>
+            <br><br>
+            <h1 class="title"><a href="archive/micro_nova/micro nova.html">MicroNova<br>Frame-by-frame Animation</a></h1>
             <br>
+            <hr><br><br>
+
+
+            <div class="pic2">
+                <a href="archive/caught_in_the_middle/caught.html">
+                    <img src="archive/caught_in_the_middle/po1.png" class="pic21 pica">
+                </a>
+                <a href="archive/caught_in_the_middle/caught.html">
+                    <img src="archive/caught_in_the_middle/po2.png" class="pic22 pica">
+                </a>
+            </div><br>
+            <h1 class="title"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle<br>Poster Design</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic2">
+                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
+                    <img src="archive/a_pile_of_poo/poo1.png" class="pic21 pica">
+                </a>
+                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
+                    <img src="archive/a_pile_of_poo/poo2.png" class="pic22 pica">
+                </a>
+            </div><br>
+            <h1 class="title"><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.<br>Website & Zine</a></h1>
+            <br><hr><br><br>
+
+
             <div class="pic2">
                 <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/purple.png" class="pic21 pica">
@@ -126,14 +177,18 @@
                 <a href="archive/letter_a/letter_a.html">
                     <img src="archive/letter_a/green.png" class="pic22 pica">
                 </a>
-            </div><hr><br><br>
+            </div><br>
+            <h1 class="title"><a href="archive/letter_a/letter_a.html">Letter A<br>Letter Design & Poster</a></h1>
+            <br><hr><br><br>
 
-            <h1 style="font-style: italic;"><a href="archive/slipping_1/slipping_1.html">Slipping Collection (1)</a></h1>
-            <br>
-            <a href="archive/slipping_1/slipping_1.html">
-                <img src="archive/slipping_1/main.png" class="pic pica">
-            </a><hr><br><br>
-        </div>
+
+            <a href="archive/millerknoll/millerknoll.html">
+                <img src="archive/millerknoll/bc.png" class="pic pica">
+            </a>
+            <br><br>
+            <h1 class="title"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library<br>Branding</a></h1>
+            <!-- <br><hr><br><br> -->
+
 
 
         <div class="home navi"></div>
