--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="home main">
             <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                <video width="100%" height="auto" autoplay loop>
+                <video width="100%" height="auto" autoplay loop muted>
                     <source src="archive/second_best/SECOND BEST.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -135,7 +135,7 @@
 
             
             <a href="archive/micro_nova/micro nova.html">
-                <video width="100%" height="auto" style="cursor: url('pointer.png') 15 0,auto;" class="videoa" autoplay loop>
+                <video width="100%" height="auto" style="cursor: url('pointer.png') 15 0,auto;" class="videoa" autoplay loop muted>
                     <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
