--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="style.css"> 
-        <script src="script.js"></script>
+        <script src="main.js"></script>
         
         <title>(Cocoon Storage) Valia Liu</title>
         <link rel="icon" href="icon.png">
