--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
 
 
             <div class="pic2">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/vanilla_chi/cover.png" class="pic21">
+                </a>
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/vanilla_chi/inner.png" class="pic22">
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Stillness, Geometric, Nostalgia.<br>Newsprint</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic2">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
                     <img src="archive/a_pile_of_poo/poo1.png" class="pic21 pica">
                 </a>
