--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </a>
             </div>
             <br>
-            <h1 class="title"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight <span style="font-style: italic;">(Blues)</span> &U<br>Vinyl Design</a></h1>
+            <h1 class="title"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight <span style="font-style: italic;">(Blues)</span> &U<br>Modeling & Vinyl Design</a></h1>
             <br><hr><br><br>
 
 
@@ -103,7 +103,7 @@
             <br>
             <h1 class="title">
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    Moon, would you<br>Vinyl Design</a></h1>
+                    Moon, would you<br>Album Cover Design</a></h1>
             <br><hr><br><br>
 
 
@@ -118,7 +118,7 @@
             <br>
             <h1 class="title">
                 <a href="archive/altoona/altoona.html">
-                    Altoona<br>Vinyl Design & Set Building</a></h1>
+                    Altoona<br>Album Cover Design & Set Building</a></h1>
             <br><hr><br><br>
 
 
@@ -169,7 +169,7 @@
             <br>
             <h1 class="title">
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    Stillness, Geometric, Nostalgia.<br>Newsprint</a></h1>
+                    Stillness, Geometric, Nostalgia.<br>Interview & Newsprint Layout</a></h1>
             <br><hr><br><br>
 
 
